--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "bundle.js",
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --hot",
+    "server": "node server.js",
     "webpack": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "repository": {
@@ -28,9 +29,14 @@
     "babel-loader": "7.0.0",
     "babel-preset-env": "1.4.0",
     "babel-preset-es2015": "6.24.1",
+    "express": "^4.15.4",
     "source-map-loader": "^0.2.1",
     "webpack": "2.2.0",
     "webpack-combine-loaders": "2.0.3",
     "webpack-dev-server": "2.4.5"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.4"
   }
 }
