--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server --hot",
     "server": "node server.js",
-    "webpack-dev": "./node_modules/.bin/webpack --config webpack.config.dev.js",
-    "webpack-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js -p"
+    "webpack": "./node_modules/.bin/webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
