--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-loader": "7.0.0",
     "babel-preset-env": "1.4.0",
     "babel-preset-es2015": "6.24.1",
+    "eslint": "^4.5.0",
     "express": "^4.15.4",
     "source-map-loader": "^0.2.1",
     "webpack": "2.2.0",
