--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node server",
     "hot-server": "./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js --hot",
     "webpack-dev": "./node_modules/.bin/webpack --config webpack.config.dev.js",
-    "webpack-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js -p"
+    "webpack-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js -p",
+    "codeStyle": "./node_modules/.bin/eslint src/**.js"
   },
   "repository": {
     "type": "git",
