--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "hot-server": "./node_modules/.bin/webpack-dev-server --config webpack.config.dev.js --hot",
     "webpack-dev": "./node_modules/.bin/webpack --config webpack.config.dev.js",
     "webpack-prod": "./node_modules/.bin/webpack --config webpack.config.prod.js -p",
-    "codeStyle": "./node_modules/.bin/eslint src/**.js"
+    "codeStyle": "./node_modules/.bin/eslint src/**.js",
+    "codeStyle-watch": "node node_modules/eslint-watch/bin/esw src/**.js -w"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "babel-preset-env": "1.4.0",
     "babel-preset-es2015": "6.24.1",
     "eslint": "^4.5.0",
+    "eslint-watch": "^3.1.2",
     "express": "^4.15.4",
     "source-map-loader": "^0.2.1",
     "webpack": "2.2.0",
