--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-loader": "7.0.0",
     "babel-preset-env": "1.4.0",
     "babel-preset-es2015": "6.24.1",
+    "bezier-js": "^2.2.3",
     "eslint": "^4.5.0",
     "eslint-watch": "^3.1.2",
     "express": "^4.15.4",
